# exam-management-system

./: .env.dev.example  .env.production.example  .gitignore  README.md  manage.py  pyproject.toml
_scripts/: Important_commands.md
_scripts/powershell/: build.ps1  clean_migrations.ps1  runserver_prodlike.ps1  startserver.ps1
_scripts/shell/: apply_migrations.sh  build.sh  build_release.sh  clean_migrations.sh  clean_release.sh  devrun.sh  migrate.sh  rebuild_release.sh  reset_dev_data.sh  run_asgi_prod.sh  run_dev.sh  run_django_prod_demo.sh  runserver_prodlike.sh  startserver.sh
accounts/: admin.py  apps.py  decorater.py  form.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
accounts/management/commands/: createsuperuser.py
accounts/utils/: crypto.py  decorater.py  decorators.py  otp.py  totp.py  validate.py
communication/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
communication/utils/: decorators.py
errors/: apps.py  views.py
errors/templates/errors/: error.html
exam_management_system/: asgi.py  settings.py  urls.py  views.py  wsgi.py
exams/: admin.py  apps.py  models.py  urls.py  views.py
templates/errors/: error.html
theme/static_src/: package-lock.json
workflow/: admin.py  apps.py  form.py  forms.py  models.py  urls.py  views.py
workflow/utils/: services.py
